version/0.41/_sources/api/solver/_autosummary/settings/node_based_averaging.rst.txt
:orphan:

.. _node_based_averaging:

node_based_averaging
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.node_based_averaging
    :show-inheritance:

.. rubric:: Attributes

==================================================   =====================================================================================================================================

Attribute                                                                                                                                                                          Summary

==================================================   =====================================================================================================================================
:ref:`enabled <enabled_13>`                                                                                                          Enable/disable node-based averaging of DPM variables.

:ref:`source_avg_enabled <source_avg_enabled>`                                                                                      Enable/disable averaging of DPM source terms to nodes.

:ref:`average_every_step <average_every_step>`                                                          Do the averaging after each integration step for higher accuracy at a higher cost.

:ref:`kernel <kernel>`                                                                                Deprecated, only for backward compatibility -- objects have been moved one level up.

:ref:`kernel_type <kernel_type>`                                                                                                                               A kernel for the averaging.

:ref:`gaussian_factor <gaussian_factor>`                 A factor for the gaussian kernel for node-based averaging.~%Large values give small size, small values give large size of kernel.

:ref:`ddpm_var_avg_enabled <ddpm_var_avg_enabled>`                                                          Average DDPM specific variables like volume fractions and velocities on nodes.

==================================================   =====================================================================================================================================

.. rubric:: Included in:

==========================   ================

Parent                                Summary

==========================   ================
:ref:`numerics <numerics>`       Main object.

==========================   ================

